--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "gray-matter": "^4.0.3",
     "mongoose": "^6.1.7",
     "next": "latest",
