--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,6 @@
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
     "typescript": "^4.5.4"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
