--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "homepage": "https://github.com/eliaspeteri/library#readme",
   "devDependencies": {
-    "concurrently": "^7.0.0"
+    "@types/express": "^4.17.13",
+    "concurrently": "^7.0.0",
+    "typescript": "^4.5.4"
   }
 }
