--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/eliaspeteri/library#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/react": "^17.0.38",
     "concurrently": "^7.0.0",
     "typescript": "^4.5.4"
   }
