--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
