--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "@types/react": "^17.0.38",
     "concurrently": "^7.0.0",
     "typescript": "^4.5.4"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
