Slowly editing the package.json.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start:production": "npm --prefix ./server/ start",
     "start:dev": "concurrently --kill-others -c cyan,magenta -n CLIENT,SERVER \"cd client/ && npm run dev\" \"npm --prefix ./server/ run dev\"",
     "front:install:build": "cd client/ && npm i && npm run build",
-    "server:install:compile": "cd server && npm i && npm run compile",
-    "preinstall": "npm run server:install:compile",
-    "postinstall": "npm run front:install:build"
+    "server:install:compile": "cd server/ && npm i && npm run compile",
+    "postinstall": "npm run server:install:compile",
+    "preinstall": "npm run front:install:build"
   },
   "repository": {
     "type": "git",
