--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "start:production": "npm --prefix ./server/ start",
     "start:dev": "concurrently --kill-others -c cyan,magenta -n CLIENT,SERVER \"cd client/ && npm run dev\" \"npm --prefix ./server/ run dev\"",
-    "front:install:build": "cd client/ && npm i && npm run build",
-    "server:install:compile": "cd server/ && npm i && npm run compile",
-    "postinstall": "npm run server:install:compile",
-    "preinstall": "npm run front:install:build"
+    "front:install:build": "npm run build --prefix ./client/",
+    "server:install:compile": "npm run compile --prefix ./server/",
+    "preinstall": "npm run server:install:compile",
+    "postinstall": "npm run front:install:build"
   },
   "repository": {
     "type": "git",
@@ -35,11 +35,13 @@
     "url": "https://github.com/eliaspeteri/library/issues"
   },
   "homepage": "https://github.com/eliaspeteri/library#readme",
+  "dependencies": {
+    "typescript": "^4.5.4"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.38",
-    "concurrently": "^7.0.0",
-    "typescript": "^4.5.4"
+    "concurrently": "^7.0.0"
   },
   "cacheDirectories": [
     ".next/cache"
