--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -53,7 +54,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.5.4"
+    "tslint-config-prettier": "^1.18.0"
   }
 }
