Added a postinstall script to build the app for Heroku.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "client",
+  "name": "library",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "axios": "^0.24.0",
