--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "postinstall": "npm run build"
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -28,6 +27,5 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "typescript": "^4.5.4"
-  },
-  "proxy": "https://eliaspeteri-library-back.herokuapp.com"
+  }
 }
