--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
@@ -26,6 +27,7 @@
     "semantic-ui-react": "^2.0.4"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.9",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
