removed cross-env.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production next start -p $PORT",
+    "start": "next start -p $PORT",
     "lint": "next lint",
     "export": "next export",
     "heroku-postbuild": "npm run build",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
