--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "mongoose": "^6.1.7",
-    "next": "latest",
+    "next": "^12.0.9",
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
