--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "export": "next export",
-    "heroku-postbuild": "npm run build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "export": "next export"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -23,7 +20,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^3.2.3",
     "mongoose": "^6.1.7",
     "next": "^12.0.9",
     "prettier": "^2.5.1",
@@ -31,7 +27,8 @@
     "react-dom": "17.0.2",
     "react-toastify": "^8.1.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.9",
@@ -39,7 +36,8 @@
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "typescript-parser": "^2.6.1"
   },
   "cacheDirectories": [
     ".next/cache"
